[package]
name = "kasa-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.2"
rust_kasa = {git = "https://github.com/paumanok/rust_kasa.git"}
#rust_kasa = { path = "../rust_kasa"}
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
